fixed flicker on icon, adjusted nav spacing, created footer componenet, footer still needs content

--- a/frontend/application_tracker/src/App.css
+++ b/frontend/application_tracker/src/App.css
@@ -24,17 +24,20 @@ body {
   cursor: pointer;
 }
 
-.main-card-component:hover {
-  transform: translate(-4px, -8px);
-  box-shadow: 0 8px 24px rgba(100, 116, 139, 0.25);
-  /* border-color: #64748b; */
-}
 
 .app-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 20px 0 20px;
+  padding: 20px 15px 0 20px;
+}
+
+
+.header-text-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 12px;
 }
 
 .app-title {
@@ -42,4 +45,17 @@ body {
   font-weight: 600;
   color: #1e293b;
   margin: 0;
+}
+
+.app-subtitle {
+  margin: -10px 0 20px 0;
+  font-size: 0.9rem;
+  color: #666;
+  font-weight: normal;
+}
+
+.main-card-component:hover {
+  transform: translate(-4px, -8px);
+  box-shadow: 0 8px 24px rgba(100, 116, 139, 0.25);
+  /* border-color: #64748b; */
 }
